<resources>
    <string name="app_name">Work(out) Smarter</string>
    <string name="main_button">Main Button</string>
    <string name="history_button">History Button</string>
    <string name="map_button">Map Button</string>
    <string name="add_new_workout">Add New Workout</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="reps_xx">Reps: XX</string>
    <string name="calories_xxx">Calories: XXX</string>
    <string name="muscle_group">(Muscle Group)</string>
<!--    <string name="delete">Delete</string>-->
    <string name="accuracy">Accuracy:</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="textview">TextView</string>
<!--    <string name="textview">TextView</string>-->
<!--    <string name="workout_name">Workout Name</string>-->
<!--    <string name="delete">Delete</string>-->
    <string name="date_xx_xx_xxxx">Date: XX/XX/XXXX</string>
    <string name="calories_burned_xxx">Calories Burned: XXX</string>
    <string name="workout_name">Workout Name</string>
    <string name="number_of_exercises">Number of Exercises:</string>
<!--    <string name="delete">Delete</string>-->
    <string name="workout_planner">Workout Planner</string>
    <string name="add_exercise">Add Exercise:</string>
    <string name="current_workout_plan">Current Workout Plan:</string>
<!--    <string name="save">Save</string>-->
    <string name="add_custom_exercise">Add Custom Exercise</string>
    <string name="add">Add</string>
    <string name="workout_group_to_add">Workout Group to Add:</string>
    <string name="workout_name_colon">Workout Name:</string>
    <string name="delete">Delete</string>
    <string name="current_workouts">Current Workouts:</string>
<!--    <string name="delete">Delete</string>-->
    <string name="delete_exercise_from_db">Delete Exercise from DB</string>
    <string name="add_exercise_">Add Exercise</string>
    <string name="exercise_name_">Exercise Name:</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="muscle_group_">Muscle Group:</string>
    <string name="reps">Reps:</string>
    <string name="save">Save</string>
    <string name="workout_history">Workout History</string>
    <string name="record_workout">Record Workout</string>
    <string name="date">Date:</string>
    <string name="workout">Workout:</string>
<!--    <string name="delete">Delete</string>-->
    <string-array name="muscle_group_array">
        <item>Legs</item>
        <item>Arms</item>
        <item>Back</item>
        <item>Chest</item>
        <item>Abs</item>
        <item>Shoulders</item>
    </string-array>
</resources>