<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gym_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GymMap">

    <include
        android:id="@+id/include3"
        layout="@layout/nav_bar"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="610dp"></include>

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGetLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/accuracy"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/longitude"
        app:layout_constraintBottom_toTopOf="@+id/textAccuracy"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/latitude"
        app:layout_constraintBottom_toTopOf="@+id/textLongitude"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/get_coordinates"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>